src/test/deca/codegen/valid/provided/testSet.ass
	TSTO #190
	BOV StackOverFlowException
; start main program
; overflow test
	BOV StackOverFlowException
	ADDSP #188
; Generation de la table des methodes
	LOAD #null, R0
	STORE R0, 241(GB)
	LOAD code.Object.equals, R0
	STORE R0, 242(GB)
; generation des classes
	LEA 1(GB), R0
	STORE R0, 243(GB)
	PUSH R15
	LOAD code.Object.equals, R0
	STORE R0, 244(GB)
	LOAD code.A.getX, R0
	STORE R0, 245(GB)
	LOAD code.A.setX, R0
	STORE R0, 246(GB)
; Main program
; Declaration des variables:
	PUSH R15
	NEW #2, R15
	BOV HeapOverFlowException
	LEA 243(GB), R0
	STORE R0, 0(R15)
	PUSH R15
	BSR init.A
	POP R15
	POP R0
	STORE R0, 247(GB)
; Beginning of main instructions:
	TSTO #4
	BOV StackOverflowException
	ADDSP #2
	PUSH R15
	LOAD #1, R15
	PUSH R15
	PUSH R15
	LOAD 247(GB), R15
	PUSH R15
	LOAD 0(R15), R15
	BSR 3(R15)
	LOAD R0, R15
	SUBSP #2
	HALT
code.Object.equals:
	LOAD -3(LB), R0
	LOAD -2(LB), R1
	CMP R0, R1
	SEQ R0
	RTS
; fields and methods generation
init.A:
	LOAD -2(LB), R1
	LOAD #0, R0
	LOAD -2(LB), R1
	STORE R0, 1(R1)
	RTS
	RTS
code.A.getX:
	PUSH R15
	LOAD -2(LB), R15
	LOAD 1(R15), R15
	POP R0
	LOAD R0, R0
	BRA fin.A.getX
fin.A.getX:
	RTS
code.A.setX:
	PUSH R15
	LOAD -3(LB), R15
	STORE R15, 1(R15)
	BRA fin.A.setX
fin.A.setX:
	RTS
DivisionByZeroException:
	WSTR "DivisionByZeroException"
	ERROR
IOException:
	WSTR "IOException"
	ERROR
StackOverFlowException:
	WSTR "StackOverflowException"
	ERROR
OverFlowException:
	WSTR "OverFlowException"
	ERROR
HeapOverFlowException:
	WSTR "HeapOverFlowException"
	ERROR
; end main program
