src/test/deca/codegen/invalid/DebugReturn.ass
	TSTO #7
	BOV StackOverFlowException
; start main program
; overflow test
	BOV StackOverFlowException
	ADDSP #5
; Generation de la table des methodes
	LOAD #null, R0
	STORE R0, 1(GB)
	LOAD code.Object.equals, R0
	STORE R0, 2(GB)
; generation des classes
	LEA 1(GB), R0
	STORE R0, 3(GB)
	LOAD code.Object.equals, R0
	STORE R0, 4(GB)
	LOAD code.A.getX, R0
	STORE R0, 5(GB)
; Main program
; Declaration des variables:
	NEW #2, R3
	BOV HeapOverFlowException
	LEA 3(GB), R0
	STORE R0, 0(R3)
	PUSH R3
	BSR init.A
	POP R3
	STORE R3, 6(GB)
; Beginning of main instructions:
	WSTR "a.getX() = "
	TSTO #3
	BOV StackOverflowException
	ADDSP #1
	LOAD 6(GB), R3
	PUSH R3
	LOAD 0(R3), R3
	BSR 2(R3)
	LOAD R0, R3
	SUBSP #1
	LOAD R3, R1
	WINT
	WNL
	HALT
code.Object.equals:
	LOAD -3(LB), R0
	LOAD -2(LB), R1
	CMP R0, R1
	SEQ R0
	RTS
; fields and methods generation
init.A:
	LOAD -2(LB), R1
	LOAD #0, R0
	LOAD -2(LB), R1
	STORE R0, 1(R1)
	RTS
	RTS
code.A.getX:
	LOAD -2(LB), R3
	LOAD 1(R3), R3
	LOAD R3, R0
	BRA fin.A.getX
fin.A.getX:
	RTS
DivisionByZeroException:
	WSTR "DivisionByZeroException"
	ERROR
IOException:
	WSTR "IOException"
	ERROR
StackOverFlowException:
	WSTR "StackOverflowException"
	ERROR
OverFlowException:
	WSTR "OverFlowException"
	ERROR
HeapOverFlowException:
	WSTR "HeapOverFlowException"
	ERROR
; end main program
